--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.drive-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql:true
-spring.jpa.hibernate.ddl-auto:create-drop
+spring.jpa.hibernate.ddl-auto:update
