--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/projectad?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/projectad?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=10101048
 spring.datasource.drive-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql:true
 spring.jpa.hibernate.ddl-auto:update
